welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:3: error: value or is not a member of Boolean
		if ((tea>=2*candy) or (candy>=2*tea)) {
                                   ^