welcome.lessons.welcome.bat.bool2.TeaParty.scala.code
def teaParty(tea:Int, candy:Int): Int = {
	if ((tea>=5) && (candy>=5)) {
		if ((tea>=2*candy) or (candy>=2*tea)) {
			return 2
		} else {
			return 1
		}
	} else {
		return 0
	}
}
